force-app/main/default/objects/MappingManager__c/MappingManager__c.object-meta.xml
<CustomObject>
    <label>Mapping Manager</label>
    <nameField>
        <displayFormat>MM-{0000}</displayFormat>
        <label>Mapping Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>