force-app/main/default/objects/MappingManager__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <label>Data Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>