force-app/main/default/objects/MappingManager__c/fields/InterfaceManager__c.field-meta.xml
<CustomField>
    <fullName>InterfaceManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interface Manager</label>
    <referenceTo>InterfaceManager__c</referenceTo>
    <relationshipLabel>Mapping Manager</relationshipLabel>
    <relationshipName>MappingManager</relationshipName>
    <type>Lookup</type>
</CustomField>