force-app/main/default/objects/MappingManager__c/fields/LegacyField__c.field-meta.xml
<CustomField>
    <fullName>LegacyField__c</fullName>
    <label>Legacy Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>