force-app/main/default/objects/MappingManager__c/fields/SalesforceField__c.field-meta.xml
<CustomField>
    <fullName>SalesforceField__c</fullName>
    <label>Salesforce Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>