force-app/main/default/objects/MappingManager__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InterfaceManager__c</columns>
    <columns>SalesforceField__c</columns>
    <columns>LegacyField__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>